# bastion

./: .gitignore  Cargo.toml  README.md
.forgejo/workflows/: release.yml
crates/core/: Cargo.toml
crates/core/src/: account_recovery.rs  api_key_token.rs  custom_field.rs  filtering.rs  generator.rs  ids.rs  lib.rs  persistence.rs  postgres.rs  rotation.rs  secret.rs  sorting.rs  tags.rs  update.rs  validation.rs  vault.rs
crates/core/tests/: account_recovery.rs  api_key_token.rs  custom_fields.rs  encrypted_persistence.rs  master_passphrase.rs  postgres_credential.rs  recovery_code_usage.rs  rotation_metadata.rs  secret_generator.rs  update_check.rs  vault_model.rs
crates/core/tests/common/: mod.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  input.rs  lib.rs  main.rs  terminal.rs  ui.rs
crates/tui/tests/: app_update.rs  input_mapping.rs  launch.rs  rendering.rs
scripts/: install.sh
src/: main.rs
tests/: install_script.rs
