[package]
name = "bastion"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bastion"
path = "src/main.rs"

[dependencies]
bastion-core = { workspace = true }
bastion-tui = { workspace = true }


[workspace]
members = [
    "crates/core",
    "crates/tui",
]
resolver = "3"


[workspace.dependencies]
bastion-core = { path = "crates/core" }
bastion-tui = { path = "crates/tui" }

argon2 = "0.5"
chacha20poly1305 = "0.11"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
crossterm = "0.29"
getrandom = "0.4"
ratatui = "0.30"
secrecy = "0.10.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.10.0", features = ["serde", "v4", "v7"] }
