[package]
name = "bastion-core"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
chrono = { workspace = true, default-features = false, features = ["clock", "serde", "std"] }
getrandom = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
